# motep

./: .gitignore  02.mtp  LICENSE  Moo.py  README.md  build_cext.sh  main.py  meson.build  motep.toml  opt.py  pot.py  pyproject.toml  setup.py
.github/actions/download-dist-artifacts/: action.yml
.github/workflows/: build.yml  docs.yml  tests.yml
benchmarks/: crossover.py  engines.py  mpi_scaling.py  optimize.py  timing.py
docs/: apply.md  calculators.md  changelog.rst  conf.py  ga.md  index.rst  installation.md  installation.rst  loss.md  upconvert.md
docs/cli/: apply.rst  evaluate.rst  grade.rst  motep.evaluate.toml  motep.grade.toml  motep.train.toml  motep.upconvert.toml  train.rst  upconvert.rst
examples/: initial.mtp  motep.toml
examples/0.0_train/: README.md  motep.toml
examples/1.0_python/: README.md  final.mtp  run.py
motep/: __init__.py  __main__.py  applier.py  calculator.py  cli.py  evaluator.py  ga.py  grader.py  initializer.py  loss.py  loss_function.py  mlippy_loss.py  mlippy_loss_function.py  mtp.py  numba.py  opt.py  parallel.py  pot.py  printer.py  radial.py  setting.py  trainer.py  upconverter.py  utils.py
motep/active/: __init__.py  algorithms.py
motep/evaluate/: __main__.py  cli.py  evaluator.py  setting.py
motep/grade/: __init__.py  __main__.py  cli.py  grader.py  maxvol.py  setting.py
motep/grader/: __init__.py  algorithms.py  grader.py
motep/io/: __init__.py  utils.py
motep/io/mlip/: cfg.py  mtp.py
motep/optimizers/: __init__.py  base.py  ga.py  ideal.py  level2mtp.py  lls.py  randomizer.py  scipy.py
motep/potentials/: __init__.py
motep/potentials/mmtp/: base.py  data.py
motep/potentials/mmtp/cext/: __init__.py  engine.py  mmtp_cext.c  mmtp_cext.h  mmtp_cext_kernels.h  mmtp_cext_module.c
motep/potentials/mmtp/numba/: chebyshev.py  engine.py  moment.py
motep/potentials/mtp/: __init__.py  base.py  data.py  moment.py  numba.py  numpy.py
motep/potentials/mtp/cext/: __init__.py  cext_helpers.h  engine.py  mtp_cext.c  mtp_cext.h  mtp_cext_kernels.h  mtp_cext_module.c
motep/potentials/mtp/jax/: conversion.py  engine.py  jax.py  moment.py  utils.py
motep/potentials/mtp/numba/: chebyshev.py  engine.py  moment.py  utils.py
motep/potentials/mtp/numpy/: chebyshev.py  engine.py  moment.py
motep/run/: __main__.py  cli.py  runner.py
motep/train/: __init__.py  __main__.py  cli.py  setting.py  trainer.py
motep/upconvert/: __init__.py  __main__.py  cli.py  setting.py  upconverter.py
tests/: conftest.py  test_calculator.py  test_cli.py  test_loss.py  test_loss_function.py  test_mmtp.py  test_mpi.py  test_mtp.py  test_radial.py  test_setting.py  test_trainer.py  test_upconverter.py
tests/active/: test_algorithms.py
tests/data_path/fitting/: prepare.sh
tests/data_path/fitting/crystals/: 0.prepare.sh  1.calc_nbh_grades.sh  prepare.sh
tests/data_path/fitting/molecules/: prepare.sh
tests/data_path/original/: prepare.py
tests/data_path/original/291/: training.cfg
tests/evaluate/: test_cli_evaluate.py
tests/grade/: test_cli_grade.py  test_grader.py  test_maxvol.py
tests/grader/: test_grader.py  test_maxvol.py
tests/io/: test_io.py  test_mtp.py
tests/optimizers/: test_ga.py  test_level2mtp.py  test_lls.py  test_scipy.py
tests/potentials/: test_jacobian.py
tests/potentials/jax/: test_moments.py
tests/potentials/mmtp/: test_data.py  test_engines.py  test_jacobian.py
tests/potentials/mtp/: test_data.py  test_engines.py  test_jacobian.py  test_radial.py
tests/train/: test_cli_train.py
tests/upconvert/: test_cli_upconvert.py  test_upconverter.py
(+136 files in other folders)
