[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "motep"
dependencies = [
    "ase",
    "mpi4py",
    "scipy",
    "numba",
]
requires-python = ">=3.11"  # tomllib
authors = [
    {name = "Pranav Kumar"},  # trainer
    {name = "Axel Forslund"},  # calculator
    {name = "Yuji Ikeda"},  # testing
]
dynamic = ["version"]

[project.optional-dependencies]
jax = [
  "jax",
]

[project.scripts]
motep = "motep.__init__:main"

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]

[tool.ruff.lint]
preview = true  # necessary to activate many pycodestyle rules
select = ["ALL"]
