[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "motep"
dependencies = [
    "ase",
    "mpi4py",
    "scipy",
    "numba",
]
requires-python = ">=3.11"  # tomllib
authors = [
    {name = "Pranav Kumar"},  # trainer
    {name = "Axel Forslund"},  # calculator
    {name = "Yuji Ikeda"},  # testing
]
dynamic = ["version"]

[project.optional-dependencies]
jax = [
  "jax",
]
cext = [
  "numpy>=1.20",
]

[project.scripts]
motep = "motep.__init__:main"

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]

[tool.ruff.lint]
preview = true  # necessary to activate many pycodestyle rules
select = ["ALL"]
