[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "motep"
dependencies = [
    "ase",
    "mpi4py",
    "scipy",
    "numba",
]
requires-python = ">=3.11"  # tomllib
readme = "README.md"
authors = [
    {name = "Axel Forslund"},  # calculator
    {name = "Yuji Ikeda"},  # testing
    {name = "Pranav Kumar"},  # trainer
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Programming Language :: C',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Operating System :: POSIX :: Linux',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]
license = 'MIT'
license-files = ['LICENSE']
dynamic = ["version"]

[project.optional-dependencies]
jax = [
  "jax",
]
cext = [
  "numpy>=1.20",
]

[project.scripts]
motep = "motep.__init__:main"

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]

[tool.ruff.lint]
preview = true  # necessary to activate many pycodestyle rules
select = ["ALL"]
